# autoart-backend

./: .env.dev  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: backend.yml  deploy.yml  mlflow.yml  test.yml  testt.yml
builder/: Dockerfile.backend  Dockerfile.mlflow
configs/: log.ini
src/analyzers/: specify.py  type.py
src/controllers/: config.py  errors.py  exceptions.py  log.py  time.py
src/info/: observe.py
src/info/cases/: cat.py  edge.py  num.py
src/linkers/: connect.py
src/mlops/: session.py
src/preprocessors/: encode.py  scale.py
tests/: conftest.py  test_num.py
