[tool.poetry]
name = "autoart-backend"
version = "0.1.0"
description = "A platform provides ML solutions by specifying steps automatically according to given data."
authors = ["Eslem Karakaş <eslem.karakas.tr@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.14"
redshift-connector = "^2.1.3"
numpy = "^2.1.1"
polars = "^1.6.0"
seaborn = "^0.13.2"
optuna = "^4.0.0"
scikit-learn = "^1.5.1"
pytest = "^8.3.3"


[tool.poetry.group.prod.dependencies]
pytest = "^8.3.3"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"
seaborn = "^0.13.2"
polars = "^1.7.1"
numpy = "^2.1.1"
redshift-connector = "^2.1.3"
boto3 = "^1.35.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
